Adding some examples/docs for the new tooling api configurability. I'll also reference them from the release notes.